refactor: style codes