@@ -18,17 +18,13 @@ public class CosmeticCmdTabComplete implements TabCompleter {
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (!(sender instanceof Player player))
-            return Collections.emptyList();
+        if (!(sender instanceof Player player)) return Collections.emptyList();
 
         if (args.length == 1) {
-            if (player.isOp())
-                return List.of("도움말", "목록", "장착", "제거", "메뉴", "주기", "뺏기");
-            else
-                return List.of("도움말", "목록", "장착", "제거", "메뉴");
+            if (player.isOp()) return List.of("도움말", "목록", "장착", "제거", "메뉴", "주기", "뺏기");
+            else return List.of("도움말", "목록", "장착", "제거", "메뉴");
         } else if (args.length == 2) {
-            if (List.of("도움말", "help", "?").contains(args[0].toLowerCase()))
-                return Collections.emptyList();
+            if (List.of("도움말", "help", "?").contains(args[0].toLowerCase())) return Collections.emptyList();
             else if (List.of("목록", "list", "장착", "wear", "제거", "remove", "메뉴", "menu", "주기", "give", "뺏기", "take").contains(args[0].toLowerCase()))
                 return List.of("등", "모자", "왼손");
         } else if (args.length == 3) {
